fix scrollbar colour dying

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,10 @@ a {
    border-radius: 10px;
 }
 
+::-webkit-scrollbar-thumb:hover {
+   background-color: var(--scrollbar-colour-hover);
+}
+
 ::selection {
    background-color: var(--highlight-colour) !important;
 }
